z-index added correctly

--- a/MyGymWeb/wwwroot/css/site.css
+++ b/MyGymWeb/wwwroot/css/site.css
@@ -24,8 +24,7 @@ body {
     font-weight: 500;
     letter-spacing: .1rem;
     box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
-    z-index: 1;
-    
+    z-index: 100 !important;
 }
 
 .nav-item {
